--- a/action.yml
+++ b/action.yml
@@ -42,7 +42,7 @@ inputs:
   commit_user_name:
     description: 'Name for the commit author.'
     required: false
-    default: 'GitHub Actions Bot'
+    default: 'Enhansome'
   commit_user_email:
     description: 'Email for the commit author.'
     required: false
@@ -78,13 +78,13 @@ runs:
   steps:
     - name: Update Submodule
       id: update_submodule
-      uses: v1nvn/enhansome/update-submodule@main
+      uses: v1nvn/enhansome/update-submodule@v1
       with:
         submodule_path: ${{ inputs.submodule_path }}
 
     - name: Sync Submodule Content
       id: sync_content
-      uses: v1nvn/enhansome/sync-submodule@main
+      uses: v1nvn/enhansome/sync-submodule@v1
       with:
         source_path: ${{ inputs.submodule_path }}
         destination_path: ${{ inputs.content_destination_path }}
@@ -93,7 +93,7 @@ runs:
 
     - name: Enhance Markdown Files with Star Counts
       id: enhance_files
-      uses: v1nvn/enhansome//enhance-readme@main
+      uses: v1nvn/enhansome//enhance-readme@v1
       with:
         github_token: ${{ inputs.github_token }} # GITHUB_TOKEN is used here for API calls
         markdown_files: ${{ inputs.files_to_enhance }}
