--- a/enhance-readme/package.json
+++ b/enhance-readme/package.json
@@ -2,14 +2,16 @@
   "name": "enhance-readme-stars-action",
   "version": "1.0.0",
   "description": "GitHub Action to add star counts to README files.",
+  "type": "module",
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [
     "github",
@@ -21,14 +23,19 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
     "@types/node": "^22.15.29",
+    "@types/unist": "^3.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "axios-mock-adapter": "^2.1.0",
-    "jest": "^30.0.2",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
