--- a/enhance-readme/tsconfig.json
+++ b/enhance-readme/tsconfig.json
@@ -1,21 +1,24 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "commonjs",
+    "module": "nodenext",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "sourceMap": true,
     "declaration": true,
     "types": [
       "node",
-      "jest"
+      "vitest"
     ],
+    "paths": {
+        "axios": ["./node_modules/axios/index.d.ts"]
+    }
   },
   "include": [
     "src/**/*.ts",
