--- a/enhance-readme/Dockerfile
+++ b/enhance-readme/Dockerfile
@@ -32,7 +32,7 @@ LABEL stage="runner"
 LABEL description="Enhances markdown files with GitHub star counts."
 LABEL maintainer="v1nvn"
 # x-release-please-start-version
-LABEL version="1.2.1"
+LABEL version="v1.2.1"
 # x-release-please-end
 
 WORKDIR /app
