chore: update README.md

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Enhansome (Awesome with stars)'
-description: 'Maintain and enhance "awesome lists" or similar repositories that aggregate links. Adds stars, issues, last activity along with find and replace.'
+description: 'Enhance "Awesome <Links>". Adds stars, issues, last activity along with find and replace.'
 author: 'v1nvn'
 
 branding:
