--- a/enhance-readme/package.json
+++ b/enhance-readme/package.json
@@ -35,7 +35,16 @@
     "@types/unist": "^3.0.3",
     "@vitest/coverage-v8": "^3.2.4",
     "axios-mock-adapter": "^2.1.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-perfectionist": "^4.15.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-promise": "^7.2.1",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0",
     "vitest": "^3.2.4"
   }
 }
