--- a/enhance-readme/package.json
+++ b/enhance-readme/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.1",
     "axios": "^1.9.0",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
